WebInject

Copyright 2010 Sven Nierlein (nierlein@cpan.org)
Copyright 2004-2006 Corey Goldberg (corey@goldb.org)
For information and documentation, visit the website at http://www.webinject.org

---------------------------------
Release History:

Version 1.56 - Sun...
    - webinject now exits with rc = 1 in case of failed tests ( not in reportmode nagios )

Version 1.55 - Sun Dec 19 11:39:30 CET 2010
    - fixed problem with xml post checks (thanks Frédéric Gicquel)
    - fixed problem with escaping form types

Version 1.54 - Tue Sep 14 11:55:48 CEST 2010
    - fixed problem with "Return code of 13 for check of service ... on host ... was out of bounds"
    - fixed problem with error output
    - fixed problem with specifying testcases in the config.xml

Version 1.53 - Aug 24, 2010
    - fixed package again

Version 1.52 - Aug 23, 2010
    - fixed package (Makefile.PL) was missing
    - added make target for webinject.pl

Version 1.51 - Jul 30, 2010
    - added EPN support for check_webinject
    - remove the long nagios output for non failed checks
    - fixed http authentication
    - fixed http.log with custom report types

Version 1.50 - Jul 29, 2010
    - changed layout to common cpan module style
    - seperated module into gui and core
    - added timeout option
    - added report-type option
    - added break_on_errors option
    - added warning / critical threshold option
    - added max_redirect option
    - added generic option to set config.xml options
    - added label setting for nagios perf data
    - fixed nagios performance data

Version 1.41 - Jan 4, 2006
    - Added ability to add multiple HTTP Headers within an 'addheader' testcase parameter
    - Added 'addheader' testcase parameter to GET requests (previously only supported POST)
    - Fixed GUI layout for high dpi displays
    - Bugfixes for 'verifyresponsecode' and 'errormessage' parameters


Version 1.40 - Dec 6, 2005
    - Support for Web Services (SOAP/XML)